[gd_scene load_steps=47 format=3 uid="uid://xhnnjmn4nugj"]

[ext_resource type="PackedScene" uid="uid://ci36jx3vvoocj" path="res://enemies/_generics/enemy.tscn" id="1_w73jc"]
[ext_resource type="Script" uid="uid://bjetjnf5dr8j1" path="res://enemies/boss_1/boss_1.gd" id="1_xtetr"]
[ext_resource type="Shader" uid="uid://7n1pltl6qwgc" path="res://shaders/dissolve.gdshader" id="2_d32yl"]
[ext_resource type="Resource" uid="uid://clhbj0gsmiwi" path="res://enemies/boss_1/boss_1_stats.tres" id="2_i8mgu"]
[ext_resource type="Texture2D" uid="uid://dljkt523lwy86" path="res://assets/sprites/enemies/boss-1/boss-1-die.png" id="2_kcxf8"]
[ext_resource type="Texture2D" uid="uid://deqkjg8jdkft3" path="res://assets/sprites/enemies/boss-1/boss-1-shoot.png" id="3_qeer7"]
[ext_resource type="Texture2D" uid="uid://dhdjvi6flg1kg" path="res://effects/gore_death_noise_texture.tres" id="3_xag0g"]
[ext_resource type="Texture2D" uid="uid://clhb4lw3j3e2s" path="res://assets/sprites/enemies/boss-1/boss-1-spawn.png" id="4_j3lod"]
[ext_resource type="Texture2D" uid="uid://cxyfdklqky7lc" path="res://assets/sprites/enemies/boss-1/boss-1-walk.png" id="5_sxbx4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0e5ht"]
bg_color = Color(0.242655, 0.707726, 0.344725, 1)

[sub_resource type="Gradient" id="Gradient_pjegc"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_v7rg8"]
gradient = SubResource("Gradient_pjegc")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.8, 0.8)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ids3a"]
resource_local_to_scene = true
shader = ExtResource("2_d32yl")
shader_parameter/progress = -2.0
shader_parameter/noiseForce = 1.0
shader_parameter/noiseTexture = ExtResource("3_xag0g")
shader_parameter/burnColor = Color(1, 0, 0, 1)
shader_parameter/borderWidth = 0.35
shader_parameter/direction = 270.0

[sub_resource type="AtlasTexture" id="AtlasTexture_xyalf"]
atlas = ExtResource("2_kcxf8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_76b2b"]
atlas = ExtResource("2_kcxf8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_82e6p"]
atlas = ExtResource("2_kcxf8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkm8g"]
atlas = ExtResource("2_kcxf8")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4tre"]
atlas = ExtResource("2_kcxf8")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw2th"]
atlas = ExtResource("2_kcxf8")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xc636"]
atlas = ExtResource("2_kcxf8")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjcsf"]
atlas = ExtResource("3_qeer7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytd2k"]
atlas = ExtResource("3_qeer7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6ogb"]
atlas = ExtResource("3_qeer7")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0x25d"]
atlas = ExtResource("3_qeer7")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8rb8"]
atlas = ExtResource("4_j3lod")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8f3h"]
atlas = ExtResource("4_j3lod")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_btn2y"]
atlas = ExtResource("4_j3lod")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lipja"]
atlas = ExtResource("4_j3lod")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekt06"]
atlas = ExtResource("4_j3lod")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1543e"]
atlas = ExtResource("4_j3lod")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcj0h"]
atlas = ExtResource("4_j3lod")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pq7q6"]
atlas = ExtResource("4_j3lod")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijxjj"]
atlas = ExtResource("4_j3lod")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6d0i"]
atlas = ExtResource("5_sxbx4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mc7q6"]
atlas = ExtResource("5_sxbx4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5aqb"]
atlas = ExtResource("5_sxbx4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0e5ht"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyalf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76b2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82e6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkm8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4tre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw2th")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xc636")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjcsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytd2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6ogb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0x25d")
}],
"loop": false,
"name": &"shoot",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8rb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8f3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btn2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lipja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekt06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1543e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcj0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pq7q6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijxjj")
}],
"loop": false,
"name": &"spawn",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6d0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mc7q6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5aqb")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xag0g"]
radius = 12.0
height = 44.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ids3a"]
radius = 15.0
height = 48.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xag0g"]
radius = 100.02

[sub_resource type="Animation" id="Animation_wejsw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_khndq"]
resource_name = "die"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.189465),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4.03333, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_od4p1"]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 0.578368, 0.516824, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gi6gu"]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 3.03143),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ids3a"]
_data = {
&"RESET": SubResource("Animation_wejsw"),
&"die": SubResource("Animation_khndq"),
&"hurt": SubResource("Animation_od4p1"),
&"spawn": SubResource("Animation_gi6gu")
}

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_0e5ht"]
polygon = PackedVector2Array(11, -8, 12, 10, 10, 25, 0, 31, -10, 25, -12, 17, -12, 3, -11, -8, 0, -13)

[node name="Boss1" instance=ExtResource("1_w73jc")]
script = ExtResource("1_xtetr")
stats = ExtResource("2_i8mgu")

[node name="DebugPanel" type="Panel" parent="." index="0"]
visible = false
light_mask = 4
visibility_layer = 4
offset_left = -57.0
offset_top = -71.0
offset_right = 54.0
offset_bottom = 34.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0e5ht")

[node name="PointLight2D" type="PointLight2D" parent="." index="1"]
show_behind_parent = true
light_mask = 4
position = Vector2(0, -18)
scale = Vector2(2, 2)
blend_mode = 1
range_item_cull_mask = 4
texture = SubResource("GradientTexture2D_v7rg8")

[node name="Sprite" parent="." index="4"]
material = SubResource("ShaderMaterial_ids3a")
sprite_frames = SubResource("SpriteFrames_0e5ht")
autoplay = "spawn"
frame_progress = 0.0

[node name="ShootPoint" type="Marker2D" parent="." index="5"]
unique_name_in_owner = true
position = Vector2(-5, -28)

[node name="CollisionShape2D" parent="." index="6"]
position = Vector2(0, -18)
shape = SubResource("CapsuleShape2D_xag0g")

[node name="Health" parent="." index="7"]
visible = false

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, -18)
shape = SubResource("CapsuleShape2D_ids3a")

[node name="WitherRadius" type="Area2D" parent="." index="10"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="WitherRadius" index="0"]
position = Vector2(0, -18)
shape = SubResource("CircleShape2D_xag0g")
debug_color = Color(0.0250004, 0.180515, 0.140529, 0.124)

[node name="AnimationPlayer" parent="." index="11"]
libraries = {
&"": SubResource("AnimationLibrary_ids3a")
}
autoplay = "spawn"

[node name="ShootTimer" type="Timer" parent="Timers" index="3"]
unique_name_in_owner = true
one_shot = true

[node name="LightOccluder2D" parent="." index="13"]
occluder = SubResource("OccluderPolygon2D_0e5ht")

[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="body_entered" from="WitherRadius" to="." method="_on_wither_radius_body_entered"]
